fix overflow

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -12,6 +12,7 @@ body {
 
 img {
   position: absolute;
+  overflow-x: hidden;
 }
 
 .text {
